# meet

./: .example-meet-config.yaml  CHANGELOG.md  LICENSE  README.md  meet-hs.cabal  meet.cabal
.github/workflows/: build.yml
app/: Args.hs  Azure.hs  Entities.hs  Main.hs  Meetings.hs  Print.hs  Types.hs  Utils.hs
python-old/: auth_flow.py  device_flow.py
rooms/: Args.hs  Main.hs
src/: Azure.hs  Config.hs  Entities.hs  Meetings.hs  Print.hs  Utils.hs
src/Meet/: Args.hs  Azure.hs  Entities.hs  Meetings.hs  Print.hs  Utils.hs
