cabal-version:      3.0
name:               meet
version:            0.1.0.2

synopsis: Find meeting times and rooms at the Turing
description: `meet` is a command-line tool for finding available meeting times at the Turing. It can additionally filter by room availability and capacity.
license:            MIT
license-file:       LICENSE
author:             Research Engineering @ The Alan Turing Institute
maintainer:         hut23@turing.ac.uk
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable meet
    import:           warnings
    main-is:          Main.hs
    other-modules:    Azure, Types, Meetings, Args, Utils, Print
    default-extensions: OverloadedStrings, ScopedTypeVariables
    -- base=4.18 (GHC 9.6) doesn't work for some reason, https://github.com/haskell/cabal/issues/9266
    -- tested with cabal 3.8 and 3.10 and both don't work
    build-depends:  base ^>=4.17 || ^>=4.19,
                    time, req, text, aeson,
                    process, vector, optparse-applicative,
                    containers, extra, ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
