cabal-version:   3.0
name:            meet
version:         0.2.0.0
license:         MIT
license-file:    LICENSE
maintainer:      hut23@turing.ac.uk
author:          Research Engineering @ The Alan Turing Institute
synopsis:        Find meeting times and rooms at the Turing
description:
    Command-line tools for finding available meeting times and rooms at the Turing. It can additionally filter by room availability and capacity.

category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Azure
        Entities
        Meetings
        Print
        Utils

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        time,
        req,
        text,
        aeson,
        ansi-terminal,
        process,
        vector,
        containers,
        extra

executable meet
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:      Args
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        meet,
        time,
        text,
        optparse-applicative

executable meet-rooms
    main-is:            Main.hs
    hs-source-dirs:     rooms
    other-modules:      Args
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        meet,
        time,
        text,
        optparse-applicative
