cabal-version:     3.0
name:              meet
version:           0.2.0.3
license:           MIT
license-file:      LICENSE
maintainer:        hut23@turing.ac.uk
homepage:          https://github.com/alan-turing-institute/meet
bug-reports:       https://github.com/alan-turing-institute/meet/issues
author:            Research Engineering @ The Alan Turing Institute
synopsis:          Find meeting times and rooms at the Turing
description:
    Command-line tools for finding available meeting times and rooms at the Turing. It can additionally filter by room availability and capacity.

category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Meet.Args
        Meet.Azure
        Meet.Entities
        Meet.Meetings
        Meet.Print
        Meet.Utils

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        aeson >= 2.2.3 && < 2.3,
        containers >= 0.6.8 && < 0.7,
        vector >= 0.13.1 && < 0.14,
        time >= 1.12.2 && < 1.13,
        text >= 2.1.1 && < 2.2,
        ansi-terminal >= 1.1.1 && < 1.2,
        extra >= 1.7.16 && < 1.8,
        process >= 1.6.20 && < 1.7,
        foldable1-classes-compat >= 0.1 && < 0.2,
        req >= 3.13.2 && < 3.14,
        process >= 1.6.18 && < 1.7,
        tz >= 0.1.3 && < 0.2,
        directory >= 1.3.8 && < 1.4,
        filepath >= 1.4.200 && < 1.5,
        unix >= 2.8.4 && < 2.9,
        bytestring >= 0.12.1.0 && < 0.13,
        binary >= 0.8.9.1 && < 0.9,
        optparse-applicative >= 0.18.1 && < 0.19,

executable meet
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:      Args, PackageInfo_meet
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        meet,
        time >= 1.12.2 && < 1.13,
        text >= 2.1.1 && < 2.2,
        optparse-applicative >= 0.18.1 && < 0.19,

executable meet-rooms
    main-is:            Main.hs
    hs-source-dirs:     rooms
    other-modules:      Args, PackageInfo_meet
    default-language:   Haskell2010
    default-extensions: OverloadedStrings ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19,
        meet,
        time >= 1.12.2 && < 1.13,
        text >= 2.1.1 && < 2.2,
        optparse-applicative >= 0.18.1 && < 0.19,
